--- a/css/styles.css
+++ b/css/styles.css
@@ -465,6 +465,16 @@ textarea {
     text-align: left;
   }
 }
+@media only screen and (min-width: 1158px) {
+  .subject {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+  }
+}
 .text {
   font-size: 16px;
   line-height: 1.5;
